# smartplace-cloud

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  HANDOFF.md  README.en.md  README.md  docker-compose.yml  license-subscription-reference.md  setup.sh  start.sh  처음하는분_쉬운가이드.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows-exe.yml  ci.yml  planforge-desktop-release.yml
backend/: .env.example  Dockerfile  requirements-dev.txt  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/scripts/: gen_license_keys.py  load_aws_keys.py  seed_naver.py  verify_s3.py
backend/tests/: _helpers.py  conftest.py  test_accounts_places.py  test_admin.py  test_auth_rbac.py  test_billing_webhook.py  test_crypto.py  test_images.py  test_license.py  test_tasks.py  test_worker.py
desktop/: README.md  app.py  automation.py  license.py  reply_draft.py  reports.py  requirements-dev.txt  requirements.txt  reviews.py  run.bat  run.command  윈도우_실행가이드.md
desktop/planforge/: README.md
desktop/planforge/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/planforge/desktop-app/src-tauri/capabilities/: default.json
desktop/planforge/desktop-app/src-tauri/src/: lib.rs  main.rs
desktop/pnl/: LICENSE  README.md  __init__.py
desktop/tests/: test_automation_logic.py  test_pnl.py  (+3 more)
docs/: make_social_preview.py
gateway/: .env.example  Dockerfile  README.md  menu_template.csv  pytest.ini  requirements.txt
web/: index.html  package-lock.json  package.json  tsconfig.json
(+117 files in other folders)
