[package]
name = "planforge-desktop"
version = "0.1.0"
description = "PlanForge desktop app"
authors = ["PlanForge"]
edition = "2021"

# The library is what main.rs and the mobile entry point call into.
[lib]
name = "planforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
